# wflign

./: CMakeLists.txt  README.md
.github/workflows/: test_on_push.yml
src/: atomic_image.hpp  edlign.cpp  edlign.hpp  main.cpp  rkmh.cpp  rkmh.hpp  wfa_edit_callback.cpp  wfa_edit_callback.hpp  wflign.cpp  wflign.hpp  wflign_edlib.cpp  wflign_wfa.cpp  wflign_wfa.hpp
